add preference number field and max_teams field and modify update and get team preference api
