# backend/web/docs/swagger.json
@@ -891,7 +891,7 @@
         },
         "/v1/progress/get/detail/{teamId}": {
             "get": {
-                "description": "获取指定团队的项目进度详细信息",
+                "description": "Get project progress detail for specific team",
                 "consumes": [
                     "application/json"
                 ],
@@ -4096,6 +4096,9 @@
             "properties": {
                 "course": {
                     "type": "string"
+                },
+                "preferenceNum": {
+                    "type": "integer"
                 },
                 "preferenceReason": {
                     "type": "string"
